k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udangujang
  labels:
    app.kubernetes.io/part-of: udangujang
